# test-rest-api

./: Cargo.toml  README.md  build.rs  vcpkg.json
proto/: PersonalData.proto
src/: main.rs  settings.rs
src/app/: app.rs
src/http/: builder.rs  mod.rs
src/http/controllers/: mod.rs
src/http/controllers/personal_data_controller/: contracts.rs  get_action.rs  mappers.rs  mod.rs  post_action.rs
src/postgres/: dto.rs  mod.rs  repo.rs
